--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -22,7 +22,6 @@ textarea
 
 .center
   text-align: center
-
   h1
     margin-bottom: 10px
 
@@ -56,7 +55,6 @@ p
   letter-spacing: -1px
   padding-top: 9px
   font-weight: bold
-
   &:hover
     color: white
     text-decoration: none
@@ -68,20 +66,15 @@ footer
   padding-top: 5px
   border-top: 1px solid $gray-medium-light
   color: $gray-light
-
   a
     color: $gray
-
     &:hover
       color: $gray-darker
-
   small
     float: left
-
   ul
     float: right
     list-style: none
-
     li
       float: left
       margin-left: 15px
@@ -104,16 +97,13 @@ aside
   section
     padding: 10px 0
     margin-top: 20px
-
     &:first-child
       border: 0
       padding-top: 0
-
     span
       display: block
       margin-bottom: 3px
       line-height: 1
-
     h1
       font-size: 1.4em
       text-align: left
@@ -141,21 +131,18 @@ input
 
 #error_explanation
   color: red
-
   ul
     color: red
     margin: 0 0 30px 0
 
 .field_with_errors
   @extend .has-error
-
   .form-control
     color: $state-danger-text
 
 .checkbox
   margin-top: -10px
   margin-bottom: 10px
-
   span
     margin-left: 20px
     font-weight: normal
@@ -169,8 +156,43 @@ input
 .users
   list-style: none
   margin: 0
-
   li
     overflow: auto
     padding: 10px 0
     border-bottom: 1px solid $gray-lighter
+
+/* microposts */
+
+.microposts
+  list-style: none
+  padding: 0
+  li
+    padding: 10px 0
+    border-top: 1px solid #e8e8e8
+  .user
+    margin-top: 5em
+    padding-top: 0
+  .content
+    display: block
+    margin-left: 60px
+    img
+      display: block
+      padding: 5px 0
+  .timestamp
+    color: $gray-light
+    display: block
+    margin-left: 60px
+  .gravatar
+    float: left
+    margin-right: 10px
+    margin-top: 5px
+
+aside
+  textarea
+    height: 100px
+    margin-bottom: 5px
+
+span.picture
+  margin-top: 10px
+  input
+    border: 0
